# optimism

./: #tmp.out#  .abigenrc  .coderabbit.yml  .dockerignore  .editorconfig  .env  .env.example  .envrc.example  .eslintrc.js  .foundryrc  .gitbook.yaml  .gitignore  .gitmodules  .kontrolrc  .markdownlint.json  .markdownlintrc  .npmrc  .pnpmfile.cjs  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.js  .semgrepignore  .snyk  .swp  .travis.yml  API.md  CHALLENGE  CHANGELOG.md  CITATION.cff  CODEOWNERS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.microservices  Dockerfile.opnode  Dockerfile.services  LICENSE  LICENSE.txt  Makefile  (+65 more)
.changeset/: afraid-coats-cheer.md  afraid-fans-draw.md  afraid-jokes-run.md  afraid-otters-repeat.md  afraid-roses-type.md  afraid-trainers-wonder.md  afraid-wasps-wonder.md  angry-cameras-arrive.md  angry-ducks-arrive.md  angry-numbers-swim.md  angry-paws-type.md  angry-queens-reflect.md  angry-wombats-marry.md  beige-clocks-wave.md  beige-eggs-jog.md  beige-keys-hammer.md  beige-masks-prove.md  beige-needles-kiss.md  beige-poems-switch.md  beige-zoos-roll.md  big-bags-grow.md  big-brooms-melt.md  big-candles-flow.md  big-cycles-listen.md  big-files-smoke.md  big-hotels-jump.md  big-hotels-swim.md  big-mayflies-dress.md  big-moose-type.md  big-pants-remain.md  big-parents-glow.md  big-phones-learn.md  big-schools-explain.md  big-scissors-remain.md  big-starfishes-jump.md  big-tables-bake.md  big-ways-push.md  big-windows-shout.md  blue-carrots-vanish.md  blue-cooks-join.md  (+1342 more)
.circleci/: config-old.yml  config-packages.yml  config.yml
.gitbook/: FAQ.md  README.md  SUMMARY.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  label-requires-reviews.yml  labeler.yml  mergify.yml  pull.yml
.husky/: pre-commit
.semgrep/: sol-rules.yaml  sol-rules.yml
aws/: README.md
batch-submitter/: CHANGELOG.md  Dockerfile  batch_submitter.go  config.go  config_test.go  dial_l2_client.go  docker.go.work  go.mod  go.sum  package.json  project.json
bedrock-devnet/: README.md  hardhat.py  main.py
bedrock-ops/: devnet-up.sh  entrypoint.sh
boba-bindings/: Dockerfile  Makefile  README.md  artifacts.json  doc.go  gen_bindings.sh  go.mod  go.sum  tools.go
boba-chain-ops/: Dockerfile  Dockerfile.geth-dump  Dockerfile.inject-state  Makefile  README.md  docker-compose.yml  go.mod  go.sum
boba-community/: .env.example  README.md  docker-compose-boba-bnb-testnet-geth.yml  docker-compose-boba-bnb-testnet-legacy.yml  docker-compose-boba-bnb-testnet.yml  docker-compose-boba-mainnet-geth.yml  docker-compose-boba-mainnet-legacy.yml  docker-compose-boba-mainnet.yml  docker-compose-boba-sepolia-geth.yml  jwt-secret.txt  (+5 more)
op-chain-ops/eof-crawler/: .gitignore  Cargo.toml  README.md  eof_crawler.go
op-chain-ops/eof-crawler/src/: ipc.rs  main.rs
op-service/rethdb-reader/: .gitignore  Cargo.toml  Makefile  README.md  headgen.sh
op-service/rethdb-reader/src/: db.rs  lib.rs  receipts.rs
op-service/rethdb-reader/testdata/: block.rlp  dummy_block.json  receipts.json
(+10749 files in other folders)
