[package]
name = "eof-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.3", features = ["derive"] }
tokio = { version = "1.24.2", features = ["macros"] }
futures = "0.3.25"
rayon = "1.6.1"
eyre = "0.6.8"
ethers = { version = "1.0.2", features = ["ipc"] }
yansi = "0.5.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[[bin]]
name = "eof-crawler"
