[package]
name = "rethdb-reader"
description = "A simple library for reading data through Reth's DB abstractions."
version = "0.1.0"
edition = "2021"

[lib]
name = "rethdbreader"
crate-type = ["cdylib"]

[dependencies]
# reth
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "e0c220e" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", rev = "e0c220e" }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "e0c220e" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "e0c220e" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth.git", rev = "e0c220e" }

# misc
serde = "1.0.197"
serde_json = "1.0.114"
anyhow = "1.0.80"

[dev-dependencies]
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "e0c220e" }
alloy-rlp = "0.3.4"
